--- a/igemwiki/engineering.html
+++ b/igemwiki/engineering.html
@@ -24,21 +24,27 @@
     <div class="row">
         <div class="col-md-2">
             <div class="navbar-inverse navbar-fixed-left">
-                <div class="side-nav-brand d-flex justify-content-center align-items-center"><a href="index.html"><img
-                            src="https://2020.igem.org/wiki/images/5/55/T--AFCM-Egypt--LOGO-BEGIN.png" alt="logo"
-                            width="100px" /></a>
-                </div>
-
                 <ul class="side-nav-items py-5 px-2">
-                    <li>
-                        <a href="Ahmed">Ahmed</a>
-                    </li>
-                    <li>
-                        <a href="Ahmed">Ahmed</a>
-                    </li>
-                    <li>
-                        <a href="Ahmed">Ahmed</a>
-                    </li>
+                    <a href="#introduction">
+                        <li>
+                            INTRODUCTION
+                        </li>
+                    </a>
+                    <a href="#designParts">
+                        <li>
+                            DESIGNING OF PARTS
+                        </li>
+                    </a>
+                    <a href="#partsOptimisation">
+                        <li>
+                            PARTS OPTIMIZATION
+                        </li>
+                    </a>
+                    <a href="#projectImprovements">
+                        <li>
+                            PROJECT IMPROVEMENTS
+                        </li>
+                    </a>
                 </ul>
             </div>
         </div>
@@ -118,7 +124,7 @@
                         A replicon mainly consists of four non structural proteins (NSPs) that are the main part that
                         cause the replication.
                     </p>
-                    <img src="assets/T--AFCM-Egypt--diagram-engineering.png" width="80%" class="my-4"
+                    <img src="https://2020.igem.org/wiki/images/0/04/T--AFCM-Egypt--diagram-engineering.png" width="80%" class="my-4"
                         style="opacity: .6;" alt="">
                     <p>
                         This year we decided to use replicons for their self amplification abilities & high expression
@@ -235,11 +241,11 @@
                         </table>
                     </div>
                     <small class="text-center">Table (1)</small>
-                    <img src="assets/T--AFCM-Egypt--designCircuit.png" width="80%" class="my-4" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/a/a1/T--AFCM-Egypt--designCircuit.png" width="80%" class="my-4" style="opacity: .7;"
                         alt="">
                     <small>Figure 1. Initial circuit design
                     </small>
-                    <img src="assets/T--AFCM-Egypt--designCircuit2.png" width="80%" class="my-4" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/7/7d/T--AFCM-Egypt--designCircuit2.png" width="80%" class="my-4" style="opacity: .7;"
                         alt="">
                     <small>Figure 2. Initial circuit SBOL design
 
@@ -253,7 +259,7 @@
                         of our vaccine using the parts (BBa_K3504000,BBa_K3504001,BBa_K3504002,BBa_K3504003). Which
                         allowed an increased expression which was proven from literature and when combined with the part
                         BBa_K3504004 as a Subgenomic promoter demonstrated the following expression results.</p>
-                    <img src="assets/T--AFCM-Egypt--designPartChart.png" class="my-4" width="80%" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/6/65/T--AFCM-Egypt--designPartChart.png" class="my-4" width="80%" style="opacity: .7;"
                         alt="">
                     <small>Figure.3 Number of positive strand RNA Before and after self replication
                     </small>
@@ -317,7 +323,7 @@
                     </div>
                     <small>Table(2)
                     </small>
-                    <img src="assets/T--AFCM-Egypt--aminoPlots.png" width="80%" class="my-5" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/a/a4/T--AFCM-Egypt--aminoPlots.png" width="80%" class="my-5" style="opacity: .7;"
                         alt="">
                     <h3>Initial Switch design</h3>
                     <p>We designed an on-switch that was designed to further increase expression, stability and provide
@@ -330,7 +336,7 @@
                                 showed that it had highest expression in usage on cases of an on switch demonstrated in
                                 the figure 10.</p>
                         </li>
-                        <img src="assets/T--AFCM-Egypt--switchPlot.png" width="80%" class="my-5 d-block"
+                        <img src="https://2020.igem.org/wiki/images/4/43/T--AFCM-Egypt--switchPlot.png" width="80%" class="my-5 d-block"
                             style="opacity: .7;" alt="">
                         <small>Figure 10. miRNA Fold change between various miRNAs, Showing that all of them can act as
                             an OFF motif but only few can actually act as an ON motif.
@@ -342,7 +348,7 @@
                             energy of -36.40 kcal/mol.
                         </li>
                         <div class="d-flex flex-column justify-content-center align-items-center">
-                            <img src="assets/T--AFCM-Egypt--marker.png" width="40%" class="my-5 d-block"
+                            <img src="https://2020.igem.org/wiki/images/f/f8/T--AFCM-Egypt--marker.png" width="40%" class="my-5 d-block"
                                 style="opacity: .7; transform: rotate(90deg);" alt="">
                             <small>Figure11.TNBC prognostic marker mir-373 RNA fold
                             </small>
@@ -355,10 +361,10 @@
                     </ol>
 
                     <h3>Current design & improvements</h3>
-                    <img src="assets/T--AFCM-Egypt--finaldesign.png" width="80%" class="my-5 d-block"
+                    <img src="https://2020.igem.org/wiki/images/0/05/T--AFCM-Egypt--finaldesign.png" width="80%" class="my-5 d-block"
                         style="opacity: .7;" alt="">
                     <small>Figure12. Final circuit Design</small>
-                    <img src="assets/T--AFCM-Egypt--finalSbol.png" width="80%" class="my-5 d-block" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/5/5d/T--AFCM-Egypt--finalSbol.png" width="80%" class="my-5 d-block" style="opacity: .7;"
                         alt="">
                     <small>Figure13.Final Sbol Design for the circuit
                     </small>
@@ -461,7 +467,7 @@
                                 </tr>
                         </table>
                     </div>
-                    <img src="assets/T--AFCM-Egypt--stability.png" width="80%" class="my-5 d-block" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/6/67/T--AFCM-Egypt--stability.png" width="80%" class="my-5 d-block" style="opacity: .7;"
                         alt="">
 
                     <h3>Cse promoter Optimization</h3>
@@ -486,12 +492,12 @@
                         with their expression using the Pearson Correlation Coefficient Calculator tool and again with
                         the length
                     </p>
-                    <img src="assets/T--AFCM-Egypt--cseChart.png" width="80%" class="my-5 d-block" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/5/59/T--AFCM-Egypt--cseChart.png" width="80%" class="my-5 d-block" style="opacity: .7;"
                         alt="">
                     <small>Figure (1)
                     </small>
 
-                    <img src="assets/T--AFCM-Egypt--cseRNAFold.png" width="80%" class="my-5 d-block"
+                    <img src="https://2020.igem.org/wiki/images/5/58/T--AFCM-Egypt--cseRNAFold.png" width="80%" class="my-5 d-block"
                         style="opacity: .7;" alt="">
                     <small>Figure (2) The RNAfold of the sequence which has the least energy which is -13.82 kcal/mol.
                     </small>
@@ -680,11 +686,11 @@
                         this presented by the part BBa_K3504007 (Gly-Ala repeats) as we found that it would help protect
                         our circuit from innate immunity attack.
                     </p>
-                    <img src="assets/T--AFCM-Egypt--ProjectImprovementCharts.png" width="80%" class="my-5 d-block"
+                    <img src="https://2020.igem.org/wiki/images/b/bc/T--AFCM-Egypt--ProjectImprovementCharts.png" width="80%" class="my-5 d-block"
                         style="opacity: .7;" alt="">
                     <small>Figure14.CTLs degradation rate after addition of Gly ala vs Before adding it
                     </small>
-                    <img src="assets/T--AFCM-Egypt--GlyAla.png" width="80%" class="my-5 d-block" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/8/86/T--AFCM-Egypt--GlyAla.png" width="80%" class="my-5 d-block" style="opacity: .7;"
                         alt="">
                     <small>Figure15.Gly-Ala repeats amino acid sequence
                     </small>
@@ -707,7 +713,7 @@
                     <p>With their binding sites being The part BBa_K3504008 (Mir-126 binding site) and the BBa_K3504019
                         (FF4 Binding site).
                     </p>
-                    <img src="assets/T--AFCM-Egypt--NorGate.png" width="80%" class="my-5 d-block" style="opacity: .7;"
+                    <img src="https://2020.igem.org/wiki/images/3/3e/T--AFCM-Egypt--NorGate.png" width="80%" class="my-5 d-block" style="opacity: .7;"
                         alt="">
                     <p>Finally we decided to remove the ON-switch as its ability to protect from silencing was replaced
                         by Gly-Ala repeats and the OFF-switch.
